--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="../img/indum/ORCHARD on Instagram_ _R3J3CT Hoodie _ ⛓--_Edición Limitada _ Disponible en nuestra página web junto a muchas novedades --_._www.orchardbones.com --_.__orchardbones _new _streetwear _aw2020 _hoodie _streetstyle__CB_EaneHa1a(JPG).jpg" alt="">
+                        <img src="../img/indum/Remera-Tradi-Love-Gris.webp" alt="">
 
                         <div class="card-body">
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
