--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <title>PimsPums Co.</title>
 
   <!-- CSS, SCSS & BOOSTRAP-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+  
+  <link rel="stylesheet" href="./scss/custom.css">
   <link rel="stylesheet" href="./css/style.css">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -24,7 +23,7 @@
 <body>
 
   <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <header class="d-flex flex-wrap justify-content-center py-1 mb-2 border-bottom">
       <a href="/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <img src="./img/PimPum.svg" class="bi me-2" width="100" height="32" alt="" srcset="">
       </a>
