--- a/pages/lanzamientos.html
+++ b/pages/lanzamientos.html
@@ -70,7 +70,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$1999</button>
-                                    <button type="button" class="btn btn-success">Comprar</button>>
+                                    <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
                             </div>
