--- a/index.html
+++ b/index.html
@@ -22,22 +22,37 @@
 
 <body>
 
-  <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-1 mb-2 border-bottom">
-      <a href="/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <img src="./img/PimPum.svg" class="bi me-2" width="100" height="32" alt="" srcset="">
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">
+        <img src="./img/Logo-PimPumPills.svg" alt="" srcset="">
       </a>
-
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/index.html" class="nav-link" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="./pages/lanzamientos.html" class="nav-link">Ultimo Lanzamiento</a></li>
-        <li class="nav-item"><a href="./pages/equip.html" class="nav-link">Equipamiento</a></li>
-        <li class="nav-item"><a href="./pages/indumentaria.html" class="nav-link">Indumentaria</a></li>
-        <li class="nav-item"><a href="./pages/outlet.html" class="nav-link">Outlet</a></li>
-
-      </ul>
-    </header>
-  </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./pages/lanzamientos.html">Ultimo Lanzamiento</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/equip.html">Equipamiento</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/indumentaria.html">Indumentaria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/outlet.html">Outlet</a>
+          </li>
+         
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
   <main>
 
@@ -50,7 +65,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img width="100%" height="100%"
+          <img 
             src="./img/headline/1-slide-1636478050871-5509311832-2a9a632668dfc8998cf832e1cbaa538f1636478057-1920-1920.webp"
             alt="" srcset="">
 
@@ -91,21 +106,21 @@
             alt="" srcset="">
 
           <h2 class="fw-normal">Ultimos Lanzamientos</h2>
-          <p><a class="btn btn-secondary" href="./pages/lanzamientos.html">Ver Mas</a></p>
+          <p><a class="btn btn-outline-success" href="./pages/lanzamientos.html">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="bd-placeholder-img rounded-circle" src="./img/Equip/PPP_Bonzo-Fire.webp" width="140" height="140"
             alt="" srcset="">
 
           <h2 class="fw-normal">Equipamiento</h2>
-          <p><a class="btn btn-secondary" href="#">Ver Mas</a></p>
+          <p><a class="btn btn-outline-success" href="#">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="bd-placeholder-img rounded-circle" src="./img/outlet/Camisa-PimPum-NITL-Negra4.webp" width="140"
             height="140" alt="" srcset="">
 
           <h2 class="fw-normal">Outlet</h2>
-          <p><a class="btn btn-secondary" href="#">Ver Mas</a></p>
+          <p><a class="btn btn-outline-success" href="#">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
       <br><br>
