--- a/pages/equip.html
+++ b/pages/equip.html
@@ -21,23 +21,37 @@
 
 <body>
 
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-1 mb-2 border-bottom">
-            <a href="/index.html"
-                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <img src="../img/PimPum.svg" class="bi me-2" width="100" height="32" alt="" srcset="">
-            </a>
-
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a href="../index.html" class="nav-link" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="./lanzamientos.html" class="nav-link">Ultimo Lanzamiento</a></li>
-                <li class="nav-item"><a href="./equip.html" class="nav-link">Equipamiento</a></li>
-                <li class="nav-item"><a href="./indumentaria.html" class="nav-link">Indumentaria</a></li>
-                <li class="nav-item"><a href="./outlet.html" class="nav-link">Outlet</a></li>
-
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="../img/Logo-PimPumPills.svg" alt="" srcset="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../pages/lanzamientos.html">Ultimo Lanzamiento</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/equip.html">Equipamiento</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/indumentaria.html">Indumentaria</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/outlet.html">Outlet</a>
+              </li>
+             
             </ul>
-        </header>
-    </div>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Buscar</button>
+            </form>
+          </div>
+        </div>
+      </nav>
 
 
     <div class="album py-5 bg-light">
