--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@
             alt="" srcset="">
 
           <h2 class="fw-normal">Ultimos Lanzamientos</h2>
-          <p><a class="btn btn-outline-success" href="./pages/lanzamientos.html">Ver Mas</a></p>
+          <p><a class="btn btn-warning" href="./pages/lanzamientos.html">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="bd-placeholder-img rounded-circle" src="./img/Equip/PPP_Bonzo-Fire.webp" width="140" height="140"
             alt="" srcset="">
 
           <h2 class="fw-normal">Equipamiento</h2>
-          <p><a class="btn btn-outline-success" href="./pages/equip.html">Ver Mas</a></p>
+          <p><a class="btn btn-warning" href="./pages/equip.html">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="bd-placeholder-img rounded-circle" src="./img/outlet/Camisa-PimPum-NITL-Negra4.webp" width="140"
             height="140" alt="" srcset="">
 
           <h2 class="fw-normal">Outlet</h2>
-          <p><a class="btn btn-outline-success" href="./pages/outlet.html">Ver Mas</a></p>
+          <p><a class="btn btn-warning" href="./pages/outlet.html">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
       <br><br>
