Agregamos Animaciones y Text.
Agregamos animaciones y text a la paginas faltantes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDown">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="./img/Logo-PimPumPills.svg" alt="" srcset="">
@@ -59,7 +59,7 @@
 
   <main>
 
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="myCarousel" class="carousel slide animate__animated animate__fadeInLeft" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
           aria-label="Slide 1"></button>
@@ -104,21 +104,21 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 animate__animated animate__fadeInUp">
           <img class="bd-placeholder-img rounded-circle" src="./img/indum/1659719353438.jpg" width="140" height="140"
             alt="" srcset="">
 
           <h2 class="fw-normal">Ultimos Lanzamientos</h2>
           <p><a class="btn btn-warning" href="./pages/lanzamientos.html">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 animate__animated animate__fadeInUp">
           <img class="bd-placeholder-img rounded-circle" src="./img/Equip/PPP_Bonzo-Fire.webp" width="140" height="140"
             alt="" srcset="">
 
           <h2 class="fw-normal">Equipamiento</h2>
           <p><a class="btn btn-warning" href="./pages/equip.html">Ver Mas</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 animate__animated animate__fadeInUp">
           <img class="bd-placeholder-img rounded-circle" src="./img/outlet/Camisa-PimPum-NITL-Negra4.webp" width="140"
             height="140" alt="" srcset="">
 
