--- a/pages/outlet.html
+++ b/pages/outlet.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand " href="../index.html">
             <img src="../img/Logo-PimPumPills.svg" alt="" srcset="">
@@ -60,7 +60,7 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img width="100%" height="100%" src="../img/outlet/Asper-Master_Lamina.webp" alt="" srcset="">
                         
                         <div class="card-body">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
                         <img src="../img/outlet/Camisa-Blanca-1-scaled.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInRight">
                         <img src="../img/outlet/Camisa-negra-01-1.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img src="../img/outlet/Camisa-PimPum-NITL-Negra4.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
                         <img src="../img/outlet/Camisa-PimPum-NonToxic-1-scaled.webp" alt="">
 
                         <div class="card-body">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInRight">
                         <img src="../img/outlet/Camisa-Rosa-01-scaled.webp" alt="">
 
                         <div class="card-body">
