--- a/pages/equip.html
+++ b/pages/equip.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand " href="../index.html">
             <img src="../img/Logo-PimPumPills.svg" alt="" srcset="">
@@ -61,7 +61,7 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img width="100%" height="100%" src="../img/Equip/Animal.webp" alt="" srcset="">
                         
                         <div class="card-body">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
                         <img src="../img/Equip/No-More-War.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInRight">
                         <img src="../img/Equip/PPP_Bonzo-Fire.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img src="../img/Equip/PPP_Bonzo-Pride.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
                         <img src="../img/Equip/PPP_Bonzo-Trama.webp" alt="">
 
                         <div class="card-body">
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInRight">
                         <img src="../img/Equip/PPP_Nuts.webp" alt="">
 
                         <div class="card-body">
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img src="../img/Equip/PPP_TimeBomb.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
                         <img src="../img/Equip/PPP_WaterMelon.webp" alt="" srcset="">
 
                         <div class="card-body">
