--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand " href="../index.html">
             <img src="../img/Logo-PimPumPills.svg" alt="" srcset="">
@@ -60,9 +60,26 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img width="100%" height="100%" src="../img/indum/APPETITE.webp" alt="" srcset="">
                         
+                        <div class="card-body ">
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-success">Comprar</button>
+                                </div>
+                                <small class="text-muted">9 mins</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
+                        <img src="../img/indum/bohemian.webp" alt="" srcset="">
+
                         <div class="card-body">
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
@@ -77,24 +94,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="../img/indum/bohemian.webp" alt="" srcset="">
-
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
-                                    <button type="button" class="btn btn-success">Comprar</button>>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInRight">
                         <img src="../img/indum/BONZO-WAR.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -112,10 +112,10 @@
                 </div>
 
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img src="../img/indum/ORCHARD on Instagram_ _FREE KEYCHAINS.jpg" alt="" srcset="">
 
-                        <div class="card-body">
+                        <div class="card-body ">
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
                         <img src="../img/indum/ROCKHAND-PURPLE-.webp" alt="">
 
                         <div class="card-body">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInRight">
                         <img src="../img/indum/ORCHARD on Instagram_.jpg" alt="">
 
                         <div class="card-body">
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInLeft">
                         <img src="../img/indum/REME-ORANGE.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeIn">
                         <img src="../img/indum/REME-PLAN-A.webp" alt="" srcset="">
 
                         <div class="card-body">
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm animate__animated animate__fadeInRight">
                         <img src="../img/indum/Remera-Aeroplane-Frente.webp" alt="" srcset="">
 
                         <div class="card-body">
