--- a/pages/lanzamientos.html
+++ b/pages/lanzamientos.html
@@ -13,16 +13,16 @@
     <link rel="stylesheet" href="../scss/custom.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    
+
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-light ">
+    <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand " href="../index.html">
                 <img src="../img/Logo-PimPumPills.svg" alt="" srcset="">
@@ -66,11 +66,11 @@
                         <img width="100%" height="100%" src="../img/indum/1659719353432.jpg" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">HANGOVER TEE</p>
+                            <h6>3 Coutas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -83,11 +83,11 @@
                         <img src="../img/indum/1659719353435.jpg" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">BURN RAGLAN TEE</P>
+                            <h6>3 Coutas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -100,11 +100,11 @@
                         <img src="../img/indum/1659719353438.jpg" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">DEATH TEE</p>
+                            <h6>3 Coutas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button !type="button" class="btn btn-warning">$1999</button>
+                                    <button !type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -122,7 +122,7 @@
                                 additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -139,7 +139,7 @@
                                 additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -156,7 +156,7 @@
                                 additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -174,7 +174,7 @@
                                 additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -191,7 +191,7 @@
                                 additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
@@ -208,7 +208,7 @@
                                 additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$1.900</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
