--- a/pages/equip.html
+++ b/pages/equip.html
@@ -65,8 +65,9 @@
                         <img width="100%" height="100%" src="../img/Equip/Animal.webp" alt="" srcset="">
                         
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Barbijos</small>
+                            <p class="card-text">Barbijo << Animal Pink >> </p>
+                                
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$1999</button>
