--- a/pages/lanzamientos.html
+++ b/pages/lanzamientos.html
@@ -67,7 +67,7 @@
 
                         <div class="card-body">
                             <p class="card-text">HANGOVER TEE</p>
-                            <h6>3 Coutas sin interes.</h6>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
@@ -84,7 +84,7 @@
 
                         <div class="card-body">
                             <p class="card-text">BURN RAGLAN TEE</P>
-                            <h6>3 Coutas sin interes.</h6>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
@@ -101,7 +101,7 @@
 
                         <div class="card-body">
                             <p class="card-text">DEATH TEE</p>
-                            <h6>3 Coutas sin interes.</h6>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button !type="button" class="btn btn-warning">$3.800</button>
@@ -118,8 +118,8 @@
                         <img src="../img/indum/1659719353441.jpg" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">DORE II</p>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
@@ -135,8 +135,8 @@
                         <img src="../img/indum/1659719353444.jpg" alt="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">WIZARD TEE</p>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
@@ -152,8 +152,8 @@
                         <img src="../img/indum/1659719353444.jpg" alt="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">WIZARD TEE</p>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
@@ -170,8 +170,8 @@
                         <img src="../img/indum/1659719353451.jpg" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">ZIP HOODIE BURN</p>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$4.900</button>
@@ -187,8 +187,8 @@
                         <img src="../img/indum/1659719353454.jpg" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">HOODIE OC</p>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$4.900</button>
@@ -204,8 +204,8 @@
                         <img src="../img/indum/1659719353457.jpg" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">POLO CAP HEAVY METAL</p>
+                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$1.900</button>
