--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -71,8 +71,8 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -88,8 +88,8 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -105,15 +105,15 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card shadow-sm animate__animated animate__fadeInLeft">
-                        <img src="../img/indum/ORCHARD on Instagram_ _FREE KEYCHAINS.jpg" alt="" srcset="">
+                        <img src="../img/indum/rockhanddddd.webp" alt="" srcset="">
 
                         <div class="card-body ">
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -123,8 +123,8 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -140,14 +140,14 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card shadow-sm animate__animated animate__fadeInRight">
-                        <img src="../img/indum/ORCHARD on Instagram_.jpg" alt="">
+                        <img src="../img/indum/Remera-Cuphead-1.webp" alt="">
 
                         <div class="card-body">
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -157,8 +157,8 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -175,8 +175,8 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -192,8 +192,8 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -209,8 +209,8 @@
                                     <button type="button" class="btn btn-warning">$1999</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
