--- a/pages/lanzamientos.html
+++ b/pages/lanzamientos.html
@@ -66,15 +66,15 @@
                         <img width="100%" height="100%" src="../img/indum/1659719353432.jpg" alt="" srcset="">
 
                         <div class="card-body">
+                            <small class="text-muted">Remeras</small>
                             <p class="card-text">HANGOVER TEE</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -83,15 +83,15 @@
                         <img src="../img/indum/1659719353435.jpg" alt="" srcset="">
 
                         <div class="card-body">
+                            <small class="text-muted">Remeras</small>
                             <p class="card-text">BURN RAGLAN TEE</P>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -100,15 +100,15 @@
                         <img src="../img/indum/1659719353438.jpg" alt="" srcset="">
 
                         <div class="card-body">
+                            <small class="text-muted">Remeras</small>
                             <p class="card-text">DEATH TEE</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button !type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -118,15 +118,15 @@
                         <img src="../img/indum/1659719353441.jpg" alt="" srcset="">
 
                         <div class="card-body">
+                            <small class="text-muted">Remeras</small>
                             <p class="card-text">DORE II</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -135,15 +135,15 @@
                         <img src="../img/indum/1659719353444.jpg" alt="">
 
                         <div class="card-body">
+                            <small class="text-muted">Remeras</small>
                             <p class="card-text">WIZARD TEE</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -152,15 +152,15 @@
                         <img src="../img/indum/1659719353444.jpg" alt="">
 
                         <div class="card-body">
+                            <small class="text-muted">Remeras</small>
                             <p class="card-text">WIZARD TEE</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$3.800</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -170,15 +170,15 @@
                         <img src="../img/indum/1659719353451.jpg" alt="" srcset="">
 
                         <div class="card-body">
+                            <small class="text-muted">Buzos</small>
                             <p class="card-text">ZIP HOODIE BURN</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$4.900</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -187,15 +187,16 @@
                         <img src="../img/indum/1659719353454.jpg" alt="" srcset="">
 
                         <div class="card-body">
+                            <small class="text-muted">Buzos</small>
                             <p class="card-text">HOODIE OC</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$4.900</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
+                                
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -204,15 +205,15 @@
                         <img src="../img/indum/1659719353457.jpg" alt="" srcset="">
 
                         <div class="card-body">
+                            <small class="text-muted">Gorras</small>
                             <p class="card-text">POLO CAP HEAVY METAL</p>
-                            <h6>3 Cuotas sin interes.</h6>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-warning">$1.900</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
