--- a/pages/equip.html
+++ b/pages/equip.html
@@ -66,15 +66,14 @@
                         
                         <div class="card-body">
                             <small class="text-muted">Barbijos</small>
-                            <p class="card-text">Barbijo << Animal Pink >> </p>
-                                
+                            <p class="card-text">Barbijo Animal Pink. </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$490,00</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -83,15 +82,15 @@
                         <img src="../img/Equip/No-More-War.webp" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Barbijos</small>
+                            <p class="card-text">Barbijo No More War.  </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
-                                    <button type="button" class="btn btn-success">Comprar</button>>
+                                    <button type="button" class="btn btn-warning">$490,00</button>
+                                    <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -100,15 +99,15 @@
                         <img src="../img/Equip/PPP_Bonzo-Fire.webp" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Toallas</small>
+                            <p class="card-text">Toalla Bonzo Fire.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900,00</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -118,15 +117,15 @@
                         <img src="../img/Equip/PPP_Bonzo-Pride.webp" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Toallas</small>
+                            <p class="card-text">Toalla Bonzo Pride.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900,00</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -135,15 +134,15 @@
                         <img src="../img/Equip/PPP_Bonzo-Trama.webp" alt="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Toallas</small>
+                            <p class="card-text">Toalla Bonzo Trama.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900,00</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -152,15 +151,15 @@
                         <img src="../img/Equip/PPP_Nuts.webp" alt="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Toallas</small>
+                            <p class="card-text">Toalla PPP Nuts.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900,00</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -170,15 +169,15 @@
                         <img src="../img/Equip/PPP_TimeBomb.webp" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Toallas</small>
+                            <p class="card-text">Toalla Time Bombs.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900,00</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
@@ -187,15 +186,15 @@
                         <img src="../img/Equip/PPP_WaterMelon.webp" alt="" srcset="">
 
                         <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <small class="text-muted">Toallas</small>
+                            <p class="card-text">Toalla WaterMelon.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-warning">$1999</button>
+                                    <button type="button" class="btn btn-warning">$4.900,00</button>
                                     <button type="button" class="btn btn-success">Comprar</button>
                                 </div>
-                                <small class="text-muted">9 mins</small>
                             </div>
+                            <small class="text-muted">3 Cuotas sin interes.</small>
                         </div>
                     </div>
                 </div>
