Cambios CSS a SASS
Realizamos cambio de css a sass

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
   <!-- CSS, SCSS & BOOSTRAP-->
 
   <link rel="stylesheet" href="./scss/custom.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./scss/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
-
-
+  
 
 </head>
 
