--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -11,7 +11,7 @@
 
     <!-- CSS, SCSS & BOOSTRAP-->
     <link rel="stylesheet" href="../scss/custom.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
