--- a/pages/lanzamientos.html
+++ b/pages/lanzamientos.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     <!-- KEYWORDS & PALABRAS CLAVE -->
-  <meta name="description" content="Ropa Dark Unisex, Emprendimiento Joven">
+  <meta name="description" content="Ropa Dark Unisex, Ultimos Lanzamientos">
   <meta name="keywords" content="shop, body shop, shopping, shopify. stop and shop">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
