--- a/pages/outlet.html
+++ b/pages/outlet.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     <!-- KEYWORDS & PALABRAS CLAVE -->
-  <meta name="description" content="Ropa Dark Unisex, Emprendimiento Joven">
+  <meta name="description" content="Ropa Dark Unisex, Outlet">
   <meta name="keywords" content="shop, body shop, shopping, shopify. stop and shop">
 
 </head>
